Joint conformation diagnostic: angle/position/energy distributions
Measures intermediate physical state (theta_LM, theta_RL, head_z,
E_joint) every 50 steps in both DOUBLE (DIAG_CPU_JOINTS) and FLOAT32
(GPU joints) configs at M=500 seed=1. Result: theta_RL mean shifts
73 mrad and head_z mean shifts +55 nm with 74% wider SD in FLOAT32,
while E_joint mean/SD/trend slope match within 4% across configs.
Conformational bias confirmed; numerical heating rejected; the
double-precision joint fix is justified but must include uVec pose
state to address the upstream amplifier.

New JointDiag class gated by BOA_DIAG_JOINT_STATS env var (default off);
BOA_DIAG_CPU_JOINTS env var added to select DOUBLE config without
recompiling.

Co-Authored-By: Claude Opus 4.7 (1M context) <noreply@anthropic.com>